Updated some implementation and the display a bit so now a section is only created if the user is in the course of the section

--- a/templates/configure_course.html
+++ b/templates/configure_course.html
@@ -117,7 +117,11 @@
                                 {% for user in users %}
                                     {% if user.role == "Instructor" or user.role == "TA" %}
                                     <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}
-                                        ({{ user.role }})
+                                        ({{ user.role }}) (
+                                        {% for course in user.courses.all %}
+                                        {{ course }},
+                                        {% endfor %}
+                                        )
                                     </option>
                                     {% endif %}
                                 {% endfor %}
