--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,4 @@
 /*
-    Login Screen:
- */
-.buttonAlignment {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/*
     Configure Users Style:
 */
 
@@ -64,6 +55,28 @@
 .create-user {
     width: 500px;
     height: 500px;
+}
+
+.formTable {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+}
+
+.formTable div {
+    display: flex;
+    flex-direction: column;
+}
+
+.formTable .fullWidth {
+    grid-column: span 2;
+}
+
+.submitAndCancelButtons {
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
+    margin-top: 10px;
 }
 
 .required:after {
