--- a/templates/course_directory.html
+++ b/templates/course_directory.html
@@ -9,13 +9,13 @@
 <a href="home.html">
     <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
 </a>
-<a href="profile_page.html" style="padding: 94%">Profile</a>
+<a href="profile_page.html" style="margin-left: 95%">Profile</a>
 <div class="navbar">
-        <a href="admin_home.html" style="padding: 110px">Admin Home</a>
-        <a href="user_directory.html" style="padding: 110px">User Directory</a>
-        <a class="active" href="course_directory.html" style="padding: 110px">Course Directory</a>
-        <a href="/" style="padding: 110px">Log Out</a>
-    </div>
+    <a href="admin_home.html" style="padding: 110px">Admin Home</a>
+    <a href="user_directory.html" style="padding: 110px">User Directory</a>
+    <a class="active" href="course_directory.html" style="padding: 110px">Course Directory</a>
+    <a href="/" style="padding: 110px">Log Out</a>
+</div>
 
 <div class="container">
     <h2 class="container">Courses:</h2>
@@ -28,42 +28,60 @@
         </label>
         <button type="submit">Apply Filter</button>
     </form>
-
-    <!-- Display Courses -->
-    <ol class="centered-list">
-        {% for course in courses %}
+</div>
+{##}
+{#<!-- Display Courses -->#}
+{#{% for course in courses %}#}
+{#    <div class="userBox">#}
+{#        <p class="p">#}
+{#            <strong>{{ course.name }}</strong> <br>#}
+{#            <!-- Display Sections -->#}
+{#            {% for section in course.sections.all %}#}
+{#                <strong>Section: {{ section.name }}</strong> <br>#}
+{#                Instructor/TA: <br>#}
+{#                {% if section.user %}#}
+{#                    {{ section.user.first_name }} {{ section.user.last_name }} ({{ section.user.get_role_display }})#}
+{#                    <br>#}
+{#                {% else %}#}
+{#                    No user assigned.#}
+{#                {% endif %}#}
+{#                Day(s): {{ section.days|join:", " }} <br>#}
+{#                Time: {% if section.time %}{{ section.time|date:"h:i A" }} <br>#}
+{#            {% else %}Not specified{% endif %}#}
+{#                Location: {% if section.location %}{{ section.location }} <br>#}
+{#            {% else %}Not specified{% endif %}#}
+{#            {% empty %}#}
+{#                No sections available for this course.#}
+{#            {% endfor %}#}
+{#        </p>#}
+{#    </div>#}
+{#{% endfor %}#}
+<div class="boxContainer">
+    {% for course in courses %}
+        <div class="whiteBox">
             <p class="p">
                 <strong>{{ course.name }}</strong> <br>
-                <ul>
-                    <!-- Display Sections -->
-                    {% for section in course.sections.all %}
-                        <li><strong>Section: {{ section.name }}</strong></li>
-                        <li>
-                            Instructor/TA:
-                            {% if section.user %}
-                                {{ section.user.first_name }} {{ section.user.last_name }} ({{ section.user.get_role_display }})
-                            {% else %}
-                                No user assigned.
-                            {% endif %}
-                        </li>
-                        <li>
-                            Day(s): {{ section.days|join:", " }}
-                        </li>
-                        <li>
-                            Time: {% if section.time %}{{ section.time|date:"h:i A" }}
-                            {% else %}Not specified{% endif %}
-                        </li>
-                        <li>
-                            Location: {% if section.location %}{{ section.location }}
-                            {% else %}Not specified{% endif %}
-                        </li>
-                    {% empty %}
-                        <li>No sections available for this course.</li>
-                    {% endfor %}
-                </ul>
+                <!-- Display Sections -->
+                {% for section in course.sections.all %}
+                    <strong>Section: {{ section.name }}</strong> <br>
+                    Instructor/TA: <br>
+                    {% if section.user %}
+                        {{ section.user.first_name }} {{ section.user.last_name }} ({{ section.user.get_role_display }})
+                        <br>
+                    {% else %}
+                        No user assigned.
+                    {% endif %}
+                    Day(s): {{ section.days|join:", " }} <br>
+                    Time: {% if section.time %}{{ section.time|date:"h:i A" }} <br>
+                {% else %}Not specified{% endif %}
+                    Location: {% if section.location %}{{ section.location }} <br>
+                {% else %}Not specified{% endif %}
+                {% empty %}
+                    No sections available for this course.
+                {% endfor %}
             </p>
-        {% endfor %}
-    </ol>
+        </div>
+    {% endfor %}
 </div>
 </body>
 </html>
