--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <a href="home.html">
     <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
 </a>
-<a href="profile_page.html" style="padding: 94%">Profile</a>
+<div><a href="profile_page.html" style="margin-left: 95%">Profile</a></div>
     <div class="navbar">
         <a href="admin_home.html" style="padding: 8.5%">Admin Home</a>
         <a href="user_directory.html" style="padding: 8.5%">User Directory</a>
