--- a/templates/configure_course.html
+++ b/templates/configure_course.html
@@ -194,72 +194,105 @@
             <button popovertarget="editCourseModal {{ course.id }}">Edit Course</button>
             <br/><br/>
 
-            <b>TAs and Labs</b><br/>
-            {% for lab in labs %}
-                {% if lab.course.name == course.name %}
-                    {% if lab.ta %}
-                        {{ lab.ta }}<br/>
+            <b>Sections and Users</b><br/>
+            {% for section in sections %}
+                {% if section.course.name == course.name %}
+                    {% if section.user %}
+                        {{ section.user }}<br/>
                     {% else %}
-                        No TA Assigned<br/>
+                        No User Assigned<br/>
                     {% endif %}
-                    {{ lab }}<br/>
-                    <div class="edit-lab-modal" popover id="editLabModal {{ lab.id }}">
-                        <h2>Edit Lab info:</h2>
-                        <div class="modal-header" id="myModal {{ lab.id }}">
-                            <form method="POST" action="{% url 'configure_course' %}">
-                                <div class="modal-dialog">
-                                    {% csrf_token %}
-                                    <input type="hidden" name="form_name" value="edit_section">
-                                    <input type="hidden" name="lab_id" value="{{ lab.id }}">
-                                    {% if lab.course.name == course.name %}
-                                        <div>
-                                            <label class="form-label required">Lab Name</label>
-                                            <input type="text" name="lab" class="form-control" value="{{ lab.name }}">
-                                        </div>
+                    {{ section }}<br/>
+                    <div class="addSectionModal" popover id="editLabModal {{ section.id }}">
+                        <h2>Edit Section info:</h2>
+                        <div class="modal-header" id="myModal {{ section.id }}">
+                            <form action=" " method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="form_name" value="create_section">
+                    <fieldset>
+                        <legend>Section Details</legend>
+                        <div>
+                            <label class="form-label required">Section Name:</label>
+                            <input type="text" class="form-control" name="section_name" value="{{ section.name }}" required>
+                        </div>
+                        <div>
+                            <label class="form-label required">Course:</label>
+                            <select name="section_course" required>
+                                <option></option>
+                                {% for i in courses %}
+                                    {% if i == section.course %}
+                                        <option selected>{{ i.name }}</option>
+                                    {% else %}
+                                        <option>{{ i.name }}</option>
                                     {% endif %}
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </fieldset>
+                <hr>
+                    <fieldset>
+                        <legend>Schedule</legend>
+                        <div>
+                            <label class="form-label required">Day(s):</label>
+                            <div class="day-checkboxes">
+                                {% for day, day_label in days %}
                                     <div>
-                                        <label class="form-label required">TAs</label>
-                                        <div class="ta-radio">
-                                            {% for ta in tas %}
-                                                <div>
-                                                    <input type="radio"
-                                                           name="ta"
-                                                           value="{{ ta.id }}"
-                                                           {% if lab.ta and lab.ta.id == ta.id %}checked{% endif %}>
-                                                    <label>{{ ta }}</label>
-                                                </div>
-                                            {% endfor %}
-                                        </div>
+                                        <input type="checkbox"
+                                               name="section_days"
+                                               value="{{ day }}"
+                                               {% if section.days and day in section.days %}checked{% endif %}>
+                                        <label>{{ day_label }}</label>
                                     </div>
-                                    <hr width="100%" size="2">
-                                    <div>
-                                        <label class="form-label required">Courses</label>
-                                        <div class="course-radio">
-                                            {% for course in courses %}
-                                                <div>
-                                                    <input type="radio"
-                                                           name="course"
-                                                           value="{{ course.id }}"
-                                                           {% if lab.course and lab.course.id == course.id %}checked{% endif %}>
-                                                    <label>{{ course.name }}</label>
-                                                </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div>
+                            <label class="form-label required">Time:</label>
+                            <input type="time" class="form-control" name="section_time"/>
+                        </div>
+                    </fieldset>
+                    <hr>
+                <fieldset>
+                <legend>Location & Users</legend>
+                        <div>
+                            <label class="form-label required">Location:</label>
+                            <input type="text" class="form-control" name="section_location" value="{{ section.location }}">
+                        </div>
+                        <div>
+                            <label class="form-label required">Assign User:</label>
+                            <select name="section_user">
+                                <option></option>
+                                {% for user in users %}
+                                    {% if user == section.user %}
+                                        {% if user.role == "Instructor" or user.role == "TA" %}
+                                        <option value="{{ user.id }}" selected>{{ user.first_name }} {{ user.last_name }}
+                                            ({{ user.role }}) (
+                                            {% for course in user.courses.all %}
+                                            {{ course }},
                                             {% endfor %}
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="modal-footer">
-                                    <button type="submit" class="btn btn-primary">Save</button>
-                                    <button type="button" class="btn btn-secondary"
-                                            popovertarget="editLabModal {{ lab.id }}"
-                                            popovertargetaction="hide">
-                                        Cancel
-                                    </button>
-                                </div>
-                            </form>
+                                            )
+                                        </option>
+                                        {% endif %}
+                                    {% else %}
+                                        {% if user.role == "Instructor" or user.role == "TA" %}
+                                        <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}
+                                            ({{ user.role }}) (
+                                            {% for course in user.courses.all %}
+                                            {{ course }},
+                                            {% endfor %}
+                                            )
+                                        </option>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </fieldset>
+                    <input type="submit">
+                </form>
                         </div>
                     </div>
-                    <button popovertarget="editLabModal {{ lab.id }}">Edit Lab</button>
+                    <button popovertarget="editLabModal {{ section.id }}">Edit Section</button>
                     <br/><br/>
                 {% endif %}
             {% endfor %}
