--- a/templates/configure_course.html
+++ b/templates/configure_course.html
@@ -209,6 +209,7 @@
                             <form action=" " method="post">
                     {% csrf_token %}
                     <input type="hidden" name="form_name" value="create_section">
+                    <input type="hidden" name="section_id" value="{{ section.id }}">
                     <fieldset>
                         <legend>Section Details</legend>
                         <div>
