--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -17,5 +17,8 @@
     <a href="course_directory.html" style="padding: 8.5%">Course Directory</a>
     <a href="/" style="padding: 8.5%">Log Out</a>
 </div>
+
+{% load custom_filters %}
+
 </body>
 </html>
