--- a/templates/user_directory.html
+++ b/templates/user_directory.html
@@ -7,14 +7,14 @@
 </head>
 <body style="background-color: rgb(217,217,217)">
 <a href="home.html">
-    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
 </a>
 <a href="profile_page.html" style="margin-left: 95%">Profile</a>
 <div class="navbar">
-    <a href="admin_home.html" style="padding: 110px">Admin Home</a>
-    <a class="active" href="user_directory.html" style="padding: 110px">User Directory</a>
-    <a href="course_directory.html" style="padding: 110px">Course Directory</a>
-    <a href="/" style="padding: 110px">Log Out</a>
+    <a href="admin_home.html" style="padding: 9vw">Admin Home</a>
+    <a class="active" href="user_directory.html" style="padding: 9vw">User Directory</a>
+    <a href="course_directory.html" style="padding: 9vw">Course Directory</a>
+    <a href="/" style="padding: 9vw">Log Out</a>
 </div>
 
 {% load custom_filters %}
