--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -7,12 +7,12 @@
 </head>
 <body style="background-color: rgb(217,217,217)">
 <a href="home.html">
-    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
 </a>
     <div class="navbar">
-        <a href="configure_user.html" style="padding: 150px">Configure Users</a>
-        <a href="configure_course.html" style="padding: 150px">Configure Courses</a>
-        <a href="/" style="padding: 150px">Log Out</a>
+        <a href="configure_user.html" style="padding: 12vw">Configure Users</a>
+        <a href="configure_course.html" style="padding: 12vw">Configure Courses</a>
+        <a href="/" style="padding: 12vh">Log Out</a>
 {#        <a href="">Databases</a>#}
 {#        <a class="active" href="admin_home.html">Admin Home</a>#}
     </div>
