--- a/templates/configure_course.html
+++ b/templates/configure_course.html
@@ -8,12 +8,12 @@
 <body style="background-color: rgb(217,217,217)">
 {#    <br/><a href="/templates/home.html">TA Scheduler</a>#}
 <a href="home.html">
-    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
 </a>
 <div class="navbar">
-    <a href="configure_user.html" style="padding: 150px">Configure Users</a>
-    <a class="active" href="configure_course.html" style="padding: 150px">Configure Courses</a>
-    <a href="/" style="padding: 150px">Log Out</a>
+    <a href="configure_user.html" style="padding: 12%">Configure Users</a>
+    <a class="active" href="configure_course.html" style="padding: 12%">Configure Courses</a>
+    <a href="/" style="padding: 12%">Log Out</a>
     {#        <a href="">Databases</a>#}
     {#        <a class="active" href="admin_home.html">Admin Home</a>#}
 </div>
@@ -68,7 +68,8 @@
                     <fieldset>
                         <legend>Section Details</legend>
                         <div>
-                            <label class="form-label required">Section Name (Must Include "Lecture", "Lab", or "Discussion"):</label>
+                            <label class="form-label required">Section Name (Must Include "Lecture", "Lab", or
+                                "Discussion"):</label>
                             <input type="text" class="form-control" name="section_name" required>
                         </div>
                         <div>
@@ -81,7 +82,7 @@
                             </select>
                         </div>
                     </fieldset>
-                <hr>
+                    <hr>
                     <fieldset>
                         <legend>Schedule</legend>
                         <div>
@@ -104,25 +105,27 @@
                         </div>
                     </fieldset>
                     <hr>
-                <fieldset>
-                <legend>Location & Users</legend>
+                    <fieldset>
+                        <legend>Location & Users</legend>
                         <div>
-                            <label class="form-label required">Location (if included, write the building and room number):</label>
+                            <label class="form-label required">Location (if included, write the building and room
+                                number):</label>
                             <input type="text" class="form-control" name="section_location">
                         </div>
                         <div>
-                            <label class="form-label required">Assign User (user must be in selected course if included):</label>
+                            <label class="form-label required">Assign User (user must be in selected course if
+                                included):</label>
                             <select name="section_user">
                                 <option></option>
                                 {% for user in users %}
                                     {% if user.role == "Instructor" or user.role == "TA" %}
-                                    <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}
-                                        ({{ user.role }}) (
-                                        {% for course in user.courses.all %}
-                                        {{ course }},
-                                        {% endfor %}
-                                        )
-                                    </option>
+                                        <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}
+                                            ({{ user.role }}) (
+                                            {% for course in user.courses.all %}
+                                                {{ course }},
+                                            {% endfor %}
+                                            )
+                                        </option>
                                     {% endif %}
                                 {% endfor %}
                             </select>
@@ -203,97 +206,109 @@
                         No User Assigned<br/>
                     {% endif %}
                     {{ section }}<br/>
-                    <div class="addSectionModal" popover id="editLabModal {{ section.id }}">
+                    <div class="addSectionModal" popover id="editSectionModal {{ section.id }}">
                         <h2>Edit Section info:</h2>
                         <div class="modal-header" id="myModal {{ section.id }}">
                             <form action=" " method="post">
-                    {% csrf_token %}
-                    <input type="hidden" name="form_name" value="edit_section">
-                    <input type="hidden" name="section_id" value="{{ section.id }}">
-                    <fieldset>
-                        <legend>Section Details</legend>
-                        <div>
-                            <label class="form-label required">Section Name (Must Include "Lecture", "Lab", or "Discussion"):</label>
-                            <input type="text" class="form-control" name="section_name" value="{{ section.name }}" required>
-                        </div>
-                        <div>
-                            <label class="form-label required">Course:</label>
-                            <select name="section_course" required>
-                                <option></option>
-                                {% for i in courses %}
-                                    {% if i == section.course %}
-                                        <option selected>{{ i.name }}</option>
-                                    {% else %}
-                                        <option>{{ i.name }}</option>
-                                    {% endif %}
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </fieldset>
-                <hr>
-                    <fieldset>
-                        <legend>Schedule</legend>
-                        <div>
-                            <label class="form-label required">Day(s):</label>
-                            <div class="day-checkboxes">
-                                {% for day, day_label in days %}
+                                {% csrf_token %}
+                                <input type="hidden" name="form_name" value="edit_section">
+                                <input type="hidden" name="section_id" value="{{ section.id }}">
+                                <fieldset>
+                                    <legend>Section Details</legend>
                                     <div>
-                                        <input type="checkbox"
-                                               name="section_days"
-                                               value="{{ day }}"
-                                               {% if section.days and day in section.days %}checked{% endif %}>
-                                        <label>{{ day_label }}</label>
+                                        <label class="form-label required">Section Name (Must Include "Lecture", "Lab",
+                                            or "Discussion"):</label>
+                                        <input type="text" class="form-control" name="section_name"
+                                               value="{{ section.name }}" required>
                                     </div>
-                                {% endfor %}
-                            </div>
-                        </div>
-                        <div>
-                            <label class="form-label required">Time:</label>
-                            <input type="time" class="form-control" name="section_time"/>
-                        </div>
-                    </fieldset>
-                    <hr>
-                <fieldset>
-                <legend>Location & Users</legend>
-                        <div>
-                            <label class="form-label required">Location (if included, write the building and room number):</label>
-                            <input type="text" class="form-control" name="section_location" value="{{ section.location }}">
-                        </div>
-                        <div>
-                            <label class="form-label required">Assign User (user must be in selected course if included):</label>
-                            <select name="section_user">
-                                <option></option>
-                                {% for user in users %}
-                                    {% if user == section.user %}
-                                        {% if user.role == "Instructor" or user.role == "TA" %}
-                                        <option value="{{ user.id }}" selected>{{ user.first_name }} {{ user.last_name }}
-                                            ({{ user.role }}) (
-                                            {% for course in user.courses.all %}
-                                            {{ course }},
+                                    <div>
+                                        <label class="form-label required">Course:</label>
+                                        <select name="section_course" required>
+                                            <option></option>
+                                            {% for i in courses %}
+                                                {% if i == section.course %}
+                                                    <option selected>{{ i.name }}</option>
+                                                {% else %}
+                                                    <option>{{ i.name }}</option>
+                                                {% endif %}
                                             {% endfor %}
-                                            )
-                                        </option>
-                                        {% endif %}
-                                    {% else %}
-                                        {% if user.role == "Instructor" or user.role == "TA" %}
-                                        <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}
-                                            ({{ user.role }}) (
-                                            {% for course in user.courses.all %}
-                                            {{ course }},
+                                        </select>
+                                    </div>
+                                </fieldset>
+                                <hr>
+                                <fieldset>
+                                    <legend>Schedule</legend>
+                                    <div>
+                                        <label class="form-label required">Day(s):</label>
+                                        <div class="day-checkboxes">
+                                            {% for day, day_label in days %}
+                                                <div>
+                                                    <input type="checkbox"
+                                                           name="section_days"
+                                                           value="{{ day }}"
+                                                           {% if section.days and day in section.days %}checked{% endif %}>
+                                                    <label>{{ day_label }}</label>
+                                                </div>
                                             {% endfor %}
-                                            )
-                                        </option>
-                                        {% endif %}
-                                    {% endif %}
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </fieldset>
-                    <input type="submit">
-                </form>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <label class="form-label required">Time:</label>
+                                        <input type="time" class="form-control" name="section_time"/>
+                                    </div>
+                                </fieldset>
+                                <hr>
+                                <fieldset>
+                                    <legend>Location & Users</legend>
+                                    <div>
+                                        <label class="form-label required">Location (if included, write the building and
+                                            room number):</label>
+                                        <input type="text" class="form-control" name="section_location"
+                                               value="{{ section.location }}">
+                                    </div>
+                                    <div>
+                                        <label class="form-label required">Assign User (user must be in selected course
+                                            if included):</label>
+                                        <select name="section_user">
+                                            <option></option>
+                                            {% for user in users %}
+                                                {% if user == section.user %}
+                                                    {% if user.role == "Instructor" or user.role == "TA" %}
+                                                        <option value="{{ user.id }}"
+                                                                selected>{{ user.first_name }} {{ user.last_name }}
+                                                            ({{ user.role }}) (
+                                                            {% for course in user.courses.all %}
+                                                                {{ course }},
+                                                            {% endfor %}
+                                                            )
+                                                        </option>
+                                                    {% endif %}
+                                                {% else %}
+                                                    {% if user.role == "Instructor" or user.role == "TA" %}
+                                                        <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}
+                                                            ({{ user.role }}) (
+                                                            {% for course in user.courses.all %}
+                                                                {{ course }},
+                                                            {% endfor %}
+                                                            )
+                                                        </option>
+                                                    {% endif %}
+                                                {% endif %}
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                </fieldset>
+                                <div class="submitAndCancelButtons">
+                                    <input type="submit" class="btn btn-primary" value="Submit">
+                                    <button type="button" class="btn btn-secondary" popovertarget="editSectionModal {{ section.id }}"
+                                            popovertargetaction="hide">
+                                        Cancel
+                                    </button>
+                                </div>
+                            </form>
                         </div>
                     </div>
-                    <button popovertarget="editLabModal {{ section.id }}">Edit Section</button>
+                    <button popovertarget="editSectionModal {{ section.id }}">Edit Section</button>
                     <br/><br/>
                 {% endif %}
             {% endfor %}
