--- a/templates/login.html
+++ b/templates/login.html
@@ -25,12 +25,12 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 90%;
-            max-width: 400px;
+            width: 80%;
+            max-width: 600px;
             background-color: #d9d9d9;
             border: 2px solid black;
             border-radius: 8px;
-            padding: 20px;
+            padding: 5%;
         }
 
         .login-header {
@@ -38,9 +38,9 @@
             text-align: center;
             background-color: #54d38e;
             color: black;
-            font-size: 2em;
+            font-size: 2.5vw;
             font-weight: bold;
-            padding: 10px;
+            padding: 2.5%;
             border-bottom: 2px solid black;
         }
 
@@ -48,23 +48,23 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            gap: 15px;
+            gap: 3vw;
         }
 
         .form-group {
             display: flex;
             flex-direction: column;
-            gap: 5px;
+            gap: 1.5vw;
         }
 
         label {
-            font-size: 16px;
+            font-size: 1.2vw;
             font-weight: bold;
         }
 
         input {
-            font-size: 16px;
-            padding: 8px;
+            font-size: 1.5vw;
+            padding: 2.5%;
             border: 1px solid #ccc;
             border-radius: 4px;
             width: 100%;
@@ -76,8 +76,8 @@
         }
 
         .btn {
-            font-size: 16px;
-            padding: 10px 20px;
+            font-size: 1.5vw;
+            padding: 2.5% 5%;
             background-color: #54d38e;
             color: black;
             border: 2px solid black;
@@ -92,16 +92,16 @@
 
         .login-container {
             width: 100%;
-            padding: 10px;
+            padding: 2.5%;
         }
 
         .login-header {
-            font-size: 20px;
-            padding: 8px;
+            font-size: 2vw;
+            padding: 2.5%;
         }
 
         input, .btn {
-            font-size: 18px;
+            font-size: 1.8vw;
         }
 
 
