--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -8,14 +8,14 @@
 <body style="background-color: rgb(217,217,217)">
 <h1>Profile Page</h1>
 <a href="home.html">
-    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 75px; width: auto;">
+    <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
 </a>
 <div><a href="profile_page.html" style="margin-left: 95%">Profile</a></div>
 <div class="navbar">
-    <a href="admin_home.html" style="padding: 8.5%">Admin Home</a>
-    <a href="user_directory.html" style="padding: 8.5%">User Directory</a>
-    <a href="course_directory.html" style="padding: 8.5%">Course Directory</a>
-    <a href="/" style="padding: 8.5%">Log Out</a>
+    <a href="admin_home.html" style="padding: 9vh">Admin Home</a>
+    <a href="user_directory.html" style="padding: 9vh">User Directory</a>
+    <a href="course_directory.html" style="padding: 9vh">Course Directory</a>
+    <a href="/" style="padding: 9vh">Log Out</a>
 </div>
 
 {% load custom_filters %}
