--- a/templates/configure_user.html
+++ b/templates/configure_user.html
@@ -11,9 +11,10 @@
     <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
 </a>
 <div class="navbar">
-    <a class="active" href="configure_user.html" style="padding: 12%">Configure Users</a>
-    <a href="configure_course.html" style="padding: 12%">Configure Courses</a>
-    <a href="/" style="padding: 12%">Log Out</a>
+    <a href="admin_home.html" style="padding: 9%">Databases</a>
+    <a class="active" href="configure_user.html" style="padding: 9%">Configure Users</a>
+    <a href="configure_course.html" style="padding: 9%">Configure Courses</a>
+    <a href="/" style="padding: 9%">Log Out</a>
     {#        <a href="">Databases</a>#}
     {#        <a class="active" href="admin_home.html">Admin Home</a>#}
 </div>
